--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.imagej/imagej-server -->
+		<dependency>
+		    <groupId>net.imagej</groupId>
+		    <artifactId>imagej-server</artifactId>
+		    <version>0.1.3-SNAPSHOT</version>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.scijava</groupId>
