--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath />
 	</parent>
 	<artifactId>scijava-parallel-imagej-server</artifactId>
-	<version>0.0.1-RC-1</version>
+	<version>0.0.1</version>
 	<name>Implementation of SciJava Parallel using ImageJ Server</name>
 	<description>Parallelization framework for SciJava applications.</description>
 	<url>https://github.com/fiji-hpc/scijava-parallel-imagej-server</url>
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-parallel</artifactId>
-			<version>8.0.0-RC-1</version>
+			<version>8.0.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
